@@ -27,8 +27,6 @@ import org.apache.ignite.binary.BinaryObjects;
 import org.apache.ignite.internal.schema.Column;
 import org.apache.ignite.internal.schema.NativeTypes;
 import org.apache.ignite.internal.schema.SchemaDescriptor;
-import org.apache.ignite.internal.storage.basic.TestMvPartitionStorage;
-import org.apache.ignite.internal.table.distributed.storage.VersionedRowStore;
 import org.apache.ignite.internal.table.impl.DummyInternalTableImpl;
 import org.apache.ignite.internal.tx.impl.HeapLockManager;
 import org.apache.ignite.internal.tx.impl.TxManagerImpl;
@@ -55,8 +53,7 @@ public class Example {
     private static List<Table> tableFactory() {
         TxManagerImpl txManager = new TxManagerImpl(null, new HeapLockManager());
 
-        return Collections.singletonList(new TableImpl(new DummyInternalTableImpl(new VersionedRowStore(
-                new TestMvPartitionStorage(List.of(), 0), txManager), txManager, new AtomicLong()), null));
+        return Collections.singletonList(new TableImpl(new DummyInternalTableImpl(txManager, new AtomicLong()), null));
     }
 
     /**
